--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -8,8 +8,7 @@
                                         “Kauśika”</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Kauśika­prajñā­pāramitā</title>
                                 <title type="mainTitle" xml:lang="bo">ཤེར་ཕྱིན་ཀཽ་ཤི་ཀ</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin kau shi
-                                        ka</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin kau shi ka</title>
                                 <title type="longTitle" xml:lang="en">The Noble Perfection of Wisdom
                                         “Kauśika”</title>
                                 <title xml:lang="Sa-Ltn" type="longTitle">ārya­kauśika­prajñā­pāramitā</title>
@@ -34,7 +33,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +83,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-05-02T14:12:59.372Z" user="admin">02/05/2023 14:12:59</note>
+                                <note type="lastUpdated" date-time="2023-05-06T21:50:13.422Z" user="admin">06/05/2023 21:50:13</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto
@@ -134,6 +133,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-05-01T08:09:40.802Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-05-01T08:09:40.802Z" user="martina-cotter">1.0.0</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2023-05-02T14:12:56.475Z" user="martina-cotter">Updated note 9.</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-06T21:50:10.615Z" user="andre">Glossary revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1259,7 +1259,7 @@
                                                 samāptā ||</p>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-034-007-199">
@@ -1294,97 +1294,42 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-034-007-204">
-                                                  <term>god</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">lha </term>
-                            <term xml:lang="bo">ལྷ།</term>
-                                                  <term xml:lang="zh">天</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">deva</term>
-                                                  <term type="definition">Cognate with the English
-                                                  term <distinct>divine</distinct>, the devas are
-                                                  most generally a class of celestial beings who
-                                                  frequently appear in Buddhist texts, often at the
-                                                  head of the assemblies of nonhuman beings who
-                                                  attend and celebrate the teachings of Śākyamuni
-                                                  and other buddhas and bodhisattvas. In Buddhist
-                                                  cosmology the devas occupy the highest of the five
-                                                  or six “destinies” (<foreign xml:lang="Sa-Ltn" type="term">gati</foreign>) of saṃsāra among which
-                                                  beings take rebirth. The devas reside in the
-                                                  <foreign xml:lang="Sa-Ltn" type="term">devalokas</foreign>, “heavens” that traditionally
-                                                  number between twenty-six and twenty-eight and are
-                                                  divided between the desire realm (<foreign xml:lang="Sa-Ltn" type="term">kāmadhātu</foreign>), material realm (<foreign xml:lang="Sa-Ltn" type="term">rūpadhātu</foreign>), and immaterial realm
-                                                  (<foreign xml:lang="Sa-Ltn" type="term">arūpyadhātu</foreign>). A being attains rebirth
-                                                  among the devas either in the desire realm through
-                                                  meritorious deeds or in the material and
-                                                  immaterial realms through the attainment of subtle
-                                                  meditative states. While rebirth among the devas
-                                                  is considered favorable, it is ultimately a
-                                                  transitory state from which beings will fall when
-                                                  the conditions that lead to rebirth there are
-                                                  exhausted. Thus, rebirth in the god realms is
-                                                  regarded as a diversion from the spiritual
-                                                  path.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-204" type="term" mode="match">
+                            <term>god</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">lha</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="zh" type="sourceUnspecified">天</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">deva</term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-034-007-205">
-                                                  <term>bodhisattva</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">byang chub sems dpa’ </term>
-                            <term xml:lang="bo">བྱང་ཆུབ་སེམས་དཔའ།</term>
-                                                  <term xml:lang="zh">菩薩摩訶薩</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bodhisattva</term>
-                                                  <term type="definition">A class of heroic beings
-                                                  who aspire to attain awakening for the sake of all
-                                                  beings. </term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-205" type="term" mode="match">
+                            <term>bodhisattva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">byang chub sems dpa’</term>
+                            <term xml:lang="bo" type="sourceAttested">བྱང་ཆུབ་སེམས་དཔའ།</term>
+                            <term xml:lang="zh" type="sourceUnspecified">菩薩摩訶薩</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bodhisattva</term>
+                            <term type="definition">A class of heroic beings who aspire to attain awakening for the sake of all beings. </term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-034-007-206">
-                                                  <term>gandharva</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-                                                  <term xml:lang="zh">乾闥婆</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">gandharva</term>
-                                                  <term type="definition">A class of generally
-                                                  benevolent nonhuman beings who inhabit the skies,
-                                                  sometimes said to inhabit fantastic cities in the
-                                                  clouds, and more specifically to dwell on the
-                                                  eastern slopes of Mount Meru, where they are under
-                                                  the jurisdiction of the Great King Dhṛtarāṣṭra.
-                                                  They are most renowned as “celestial musicians”
-                                                  who serve the gods. Gandharvas are said to live on fragrances
-                                                  in the desire realm, hence the Tibetan translation
-                                                  <foreign xml:lang="Bo-Ltn" type="term">dri
-                                                  za</foreign>, meaning “scent eater.”</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-206" type="term" mode="match">
+                            <term>gandharva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="zh" type="sourceUnspecified">乾闥婆</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gandharva</term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-034-007-207">
-                                                  <term>blessed one</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">bcom ldan ’das </term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                                                  <term xml:lang="zh">世尊</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bhagavat</term>
-                                                  <term type="definition">In Buddhist literature, an
-                                                  epithet applied to buddhas, most often to
-                                                  Śākyamuni. The Sanskrit term generally means
-                                                  “possessing fortune,” but in specifically Buddhist
-                                                  contexts it implies that a buddha is in possession
-                                                  of six auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>)
-                                                  associated with complete awakening. The Tibetan
-                                                  term—where <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the
-                                                  four māras, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the great
-                                                  qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to
-                                                  “going beyond” saṃsāra and nirvāṇa‍—possibly
-                                                  reflects the commentarial tradition where the
-                                                  Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, in addition,
-                                                  as “one who destroys the four māras.” This is
-                                                  achieved either by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign>
-                                                  as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”), or by
-                                                  tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root
-                                                  √<foreign xml:lang="Sa-Ltn" type="term">bhañj</foreign> (“to break”).</term>
-                                                  <term type="alternative">blessed</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-207" type="term" mode="match">
+                            <term>blessed one</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="zh" type="sourceUnspecified">世尊</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavat</term>
+                            <term type="alternative">blessed</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-034-007-208">
@@ -1412,19 +1357,14 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-034-007-212">
-                                                  <term>Kauśika</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">kau shi ka </term>
-                            <term xml:lang="bo">ཀཽ་ཤི་ཀ</term>
-                                                  <term xml:lang="zh">憍尸迦</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">Kauśika</term>
-                                                  <term type="definition">An epithet of the god
-                                                  Śakra. The name means “one who belongs to the
-                                                  Kuśika lineage.” In the Ṛgveda, Śakra is addressed
-                                                  by the epithet Kauśika, with the implication that
-                                                  he is associated with the descendants of the
-                                                  Kuśika lineage.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-212" type="person" mode="match">
+                            <term>Kauśika</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">kau shi ka</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀཽ་ཤི་ཀ</term>
+                            <term xml:lang="zh" type="sourceUnspecified">憍尸迦</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kauśika</term>
+                            <term type="definition">An epithet of the god Śakra. The name means “one who belongs to the Kuśika lineage.” In the Ṛgveda, Śakra is addressed by the epithet Kauśika, with the implication that he is associated with the descendants of the Kuśika lineage.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-034-007-213">
@@ -1473,16 +1413,14 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-034-007-218">
-                                                  <term>Mount Sumeru</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">ri rab </term>
-                            <term xml:lang="bo">རི་རབ།</term>
-                                                  <term xml:lang="zh">須彌山</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">Sumeru</term>
-                                                  <term type="definition">The axis mundi of Buddhist
-                                                  cosmology, the mountain located at the center of a
-                                                  universe and surrounded by four continents.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-034-007-218" type="place" mode="match">
+                            <term>Mount Sumeru</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">ri rab</term>
+                            <term xml:lang="bo" type="sourceAttested">རི་རབ།</term>
+                            <term xml:lang="zh" type="sourceUnspecified">須彌山</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sumeru</term>
+                            <term type="definition">The axis mundi of Buddhist cosmology, the mountain located at the center of a universe and surrounded by four continents.</term>
+                        </gloss>
                     </item>
                                 </list>
                         </div>
