--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2023</date>
+                <edition>v 1.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -71,7 +71,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-10T09:18:03.81Z" user="admin">10/05/2023 09:18:03</note>
+        <note type="lastUpdated" date-time="2023-05-10T09:55:47.706Z" user="admin">10/05/2023 09:55:47</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -127,6 +127,7 @@
         <note type="updated" update="text-version" value="1.0.5" date-time="2023-05-09T09:22:28.09Z" user="john">Note 3 modified and Orosz 2010 added
           to biblio.</note>
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-05-10T09:18:00.985Z" user="laura">Edits to translation + notes from Andreas</note>
+          <note type="updated" update="text-version" value="1.0.7" date-time="2023-05-10T09:55:44.882Z" user="john">Typo corrected.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -183,7 +184,7 @@
             related to its being part of the Compendium of Dhāraṇīs, which seems to have been compiled on the basis of an earlier collection or
             collections of dhāraṇīs and associated ritual texts.<note place="end" xml:id="UT22084-101-146-11"> The opening lines of the table of
               contents (<foreign xml:lang="Bo-Ltn" type="term">dkar chag</foreign>) of an independent dhāraṇī collection printed in Beijing in 1731,
-              found in the Library of the Hungarian Academy of Sciences in Budapest and transcribed by Orosz, identifies the source of all such
+              found in the Library of the Hungarian Academy of Sciences in Budapest and transcribed by Orosz, identify the source of all such
               dhāraṇī collections as the extracanonical collection edited by Tāranātha (Orosz 2010, pp. 67 and 100). This mention is also noted by
               Hidas 2021, p. 7, n. 56).</note> These collections, known in Sanskrit as <title xml:lang="Sa-Ltn">dhāraṇī­saṃgrahas</title>, appear in
             South Asia and Tibet—including at Dunhuang and as extracanonical Tibetan dhāraṇī collections—and often include praises as well as dhāraṇīs
