--- a/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
+++ b/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
@@ -31,7 +31,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Twenty and family</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.19 <date>2022</date>
+                <edition>v 1.0.20 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-18T17:05:34.391Z" user="celso">18/01/2023 17:05:34</note>
+        <note type="lastUpdated" date-time="2023-05-10T10:08:11.588Z" user="admin">10/05/2023 10:08:11</note>
         <note type="updated" update="translation-status" value="2.c" date-time="2019-05-01T10:47:28.638Z" user="john">2.c</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:13:12.9Z" user="mike">2.d</note>
@@ -104,6 +104,7 @@
           <note type="updated" update="text-version" value="1.0.17" date-time="2022-07-26T05:56:37.026Z" user="cabie-sim">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.0.18" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.0.19" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.0.20" date-time="2023-05-10T10:08:08.689Z" user="john">Spelling corrected.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2704,7 +2705,7 @@
           <p tid="328">Around the same time, Venerable Subhūti entered the great city of Rājagṛha
             through the western gate <ref type="sanskrit">{TK81}</ref> to beg alms. There, at the
             gate to the city, fifty māra youths, endowed with supreme youthful beauty, attired to
-            resemble sons of distinguished personages, gallavanted about, dancing and singing. They
+            resemble sons of distinguished personages, gallivanted about, dancing and singing. They
             seized Venerable Subhūti by both hands and, prancing along the street, urged him,
             “Dance, monk! Sing, monk!” </p>
           <milestone unit="chunk" xml:id="UT22084-056-006-484"/>
