--- a/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
+++ b/translations/kangyur/translations/056-006_toh138-the_great_collection_sutra_of_the_incantations_of_ratnaketu.xml
@@ -31,7 +31,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Twenty and family</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.21 <date>2022</date>
+                <edition>v 1.0.22 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -67,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-10T10:25:16.364Z" user="admin">10/05/2023 10:25:16</note>
+        <note type="lastUpdated" date-time="2023-05-10T10:30:44.651Z" user="admin">10/05/2023 10:30:44</note>
         <note type="updated" update="translation-status" value="2.c" date-time="2019-05-01T10:47:28.638Z" user="john">2.c</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:13:12.9Z" user="mike">2.d</note>
@@ -106,6 +106,7 @@
           <note type="updated" update="text-version" value="1.0.19" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.0.20" date-time="2023-05-10T10:08:08.689Z" user="john">Spelling corrected.</note>
           <note type="updated" update="text-version" value="1.0.21" date-time="2023-05-10T10:25:13.459Z" user="john">An error in ch 6 (Candraprabha not Subhūti) corrected.</note>
+          <note type="updated" update="text-version" value="1.0.22" date-time="2023-05-10T10:30:41.709Z" user="john">Update following re-cache</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
