--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor ref="sponsors.xml#sponsor-190">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.36.1 <date>2023</date>
+                <edition>v 1.36.2 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-26T09:12:14.937Z" user="admin">26/04/2023 09:12:14</note>
+                <note type="lastUpdated" date-time="2023-05-10T11:25:56.006Z" user="admin">10/05/2023 11:25:56</note>
                 <note type="updated" update="text-version" value="v 1.14" date-time="2019-06-18T02:25:27.313Z" user="celso">v 1.14 2019</note>
                 <note type="updated" update="text-version" value="v 1.15" date-time="2019-06-21T14:11:40.294Z" user="celso">v 1.15 2019</note>
                 <note type="updated" update="text-version" value="v 1.17" date-time="2019-07-31T19:46:14.742Z" user="celso">v 1.17 2019</note>
@@ -138,6 +138,7 @@
                 <note type="updated" update="text-version" value="1.35.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.35.13" date-time="2023-04-19T11:10:33.873Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema. No need to update associated files.</note>
                 <note type="updated" update="text-version" value="1.36.1" date-time="2023-04-26T09:12:11.666Z" user="john">Edited one note.</note>
+                <note type="updated" update="text-version" value="1.36.2" date-time="2023-05-10T11:25:52.837Z" user="martina-cotter">updated glossary issue.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -12085,7 +12086,8 @@
                             <term>abscesses</term>
                             <term xml:lang="Bo-Ltn">shu ba </term>
                             <term xml:lang="bo">ཤུ་བ།</term>
-                            <term xml:lang="Sa-Ltn">dardgu</term>
+                            <term xml:lang="Sa-Ltn">dardru</term>
+                            <term xml:lang="Sa-Ltn">dardrū</term>
                             <term type="definition">Symptom that may be evidence of an illness considered an impediment to ordination.</term>
                             <term type="definition">See also <ptr target="#UT22084-001-001-1011"/>.</term>
                         </gloss>
