--- a/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/placeholders/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -10,13 +10,14 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2021</date>
+                <edition>v 0.0.17 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-087-011"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +43,7 @@
             </sourceDesc>
             <notesStmt>
                 <note>Note: not identified in Toh.</note>
-                <note type="lastUpdated" date-time="2023-04-24T08:54:44.569Z" user="admin">24/04/2023 08:54:44</note>
+                <note type="lastUpdated" date-time="2023-05-10T13:57:20.95Z" user="admin">10/05/2023 13:57:20</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-01-12T15:49:02.772Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-14T10:25:08.293Z" user="line-tofte">Auto (update-sponsorship)</note>
@@ -64,6 +65,9 @@
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-21T09:38:31.978Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-04-24T08:54:40.198Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-24T08:54:40.198Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2023-05-10T13:56:29.326Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-10T13:57:16.67Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.17" date-time="2023-05-10T13:57:16.67Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
