--- a/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
+++ b/translations/kangyur/placeholders/101-114_toh1059-mantra_for_enchanting_medicines_extracted_from_destroyer_of_the_great_trichiliocosm.xml
@@ -10,12 +10,13 @@
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-101-114"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-18T11:10:34.295Z" user="admin">18/04/2023 11:10:34</note>
+                <note type="lastUpdated" date-time="2023-05-10T13:58:22.058Z" user="admin">10/05/2023 13:58:22</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:59:27.641Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:59:51.087Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +45,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-04-12T13:06:12.19Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-04-18T11:10:30.033Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-04-18T11:10:30.033Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-04-18T11:11:07.552Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-05-10T13:58:17.802Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-05-10T13:58:17.802Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
