--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -20,10 +20,10 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.17 <date>2020</date>
+                <edition>v 0.0.18 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-071-011"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-14T07:30:42.33Z" user="admin">14/04/2023 07:30:42</note>
+                <note type="lastUpdated" date-time="2023-05-10T14:14:10.208Z" user="admin">10/05/2023 14:14:10</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -64,6 +64,8 @@
                 <note type="updated" update="text-version" value="0.0.16" date-time="2023-03-30T13:08:59.827Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-04-14T07:30:37.98Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.17" date-time="2023-04-14T07:30:37.98Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-05-10T14:14:05.929Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.18" date-time="2023-05-10T14:14:05.929Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
