--- a/translations/kangyur/placeholders/083-019_toh471-the_practice_of_the_legend.xml
+++ b/translations/kangyur/placeholders/083-019_toh471-the_practice_of_the_legend.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-083-019"/>
                 <date/>
             </publicationStmt>
@@ -31,11 +31,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:07:36.588Z" user="admin">30/06/2022 13:07:36</note>
+                <note type="lastUpdated" date-time="2023-05-11T07:52:27.607Z" user="admin">11/05/2023 07:52:27</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:06:52.251Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:07:28.729Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-11T07:52:23.328Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-11T07:52:23.328Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
