--- a/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
+++ b/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­vajrapāṇi­mahāyānasūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="">
                 <idno xml:id="UT22084-034-017"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T13:11:47.039Z" user="admin">20/01/2023 13:11:47</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:28:30.435Z" user="admin">11/05/2023 13:28:30</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:28:26.189Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:28:26.189Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
