--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -11,10 +11,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">tridharmakanāmasūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T15:05:17.931Z" user="admin">30/01/2023 15:05:17</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:34:12.059Z" user="admin">11/05/2023 13:34:12</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:34:07.798Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:34:07.798Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
