--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -9,10 +9,10 @@
                 <title type="mainTitle" xml:lang="en">The Four Stanzas</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -28,7 +28,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T09:42:37.94Z" user="admin">01/03/2023 09:42:37</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:44:10.691Z" user="admin">11/05/2023 13:44:10</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:44:06.443Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:44:06.443Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
