--- a/translations/kangyur/placeholders/090-011_toh567,1003-jayavati_the_great_queen_of_spells.xml
+++ b/translations/kangyur/placeholders/090-011_toh567,1003-jayavati_the_great_queen_of_spells.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmamahāvidyārājñī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-011"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T09:40:35.184Z" user="admin">01/03/2023 09:40:35</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:50:11.165Z" user="admin">11/05/2023 13:50:11</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:50:06.919Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:50:06.919Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
