--- a/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
+++ b/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
@@ -13,10 +13,10 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-012"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T09:41:21.915Z" user="admin">01/03/2023 09:41:21</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:54:48.234Z" user="admin">11/05/2023 13:54:48</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:54:43.953Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:54:43.953Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
