--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -10,10 +10,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">tshigs bcad gnyis pa'i gzungs/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-057-002"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-01T09:43:12.668Z" user="admin">01/03/2023 09:43:12</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:43:08.219Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:43:08.219Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:56:51.677Z" user="admin">11/05/2023 13:56:51</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:43:08.219Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:43:08.219Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:56:47.418Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:56:47.418Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
