--- a/translations/kangyur/placeholders/076-013_toh359-the_sutra_of_the_twelve_eyes.xml
+++ b/translations/kangyur/placeholders/076-013_toh359-the_sutra_of_the_twelve_eyes.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">mig bcu gnyis pa zhes bya ba'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">dvidaśalocananāmasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-076-013"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh359" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:29:02 by admin</note>
+                <note type="lastUpdated" date-time="2023-05-11T13:59:38.427Z" user="admin">11/05/2023 13:59:38</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:59:34.211Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-05-11T13:59:34.211Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
