--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -71,7 +71,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-10T09:55:47.706Z" user="admin">10/05/2023 09:55:47</note>
+        <note type="lastUpdated" date-time="2023-05-11T15:24:59.481Z" user="admin">11/05/2023 15:24:59</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -128,6 +128,7 @@
           to biblio.</note>
           <note type="updated" update="text-version" value="1.0.6" date-time="2023-05-10T09:18:00.985Z" user="laura">Edits to translation + notes from Andreas</note>
           <note type="updated" update="text-version" value="1.0.7" date-time="2023-05-10T09:55:44.882Z" user="john">Typo corrected.</note>
+          <note type="updated" update="text-version" value="1.0.8" date-time="2023-05-11T15:24:56.605Z" user="celso">typo corrected in homage and n.7, recached glossary</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -225,23 +226,23 @@
                     </p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-101-146-179"/>
-          <lg tid="103">
-            <l>
-                            <seg key="toh1777">Homage to Glorious Vajrapāṇi.</seg>
-                            <note place="end" xml:id="UT22084-101-146-178">
-                                <p key="toh1777">The verse of
-                  homage above is found only in the Tengyur recension of the text (Toh 1777). It is absent in the Kangyur recension (Toh 1090).</p>
-                <p key="toh1090">The Tengyur recension of the text (Toh 1777) contains the homage “Homage to Glorious Vajrapani,” which is absent in
-                  the Kangyur recension (Toh 1090). </p>
-                            </note>
-                            <seg key="toh1090">O Devī, you wander in this world, naked, riding a donkey— </seg>
-                        </l>
-            <lb key="toh1777"/>
-            <l key="toh1777">O Devī, you wander in this world, naked, riding a donkey—</l>
+          <lg key="toh1777" tid="103">
+            <l>Homage to Glorious Vajrapāṇi.<note place="end" xml:id="UT22084-101-146-178">
+              This verse of homage is found only in the Tengyur recension of the text (Toh 1777).
+              It is absent in the Kangyur recension (Toh 1090).</note>
+            </l>
+          </lg>
+          <lg tid="116">
+            <l key="toh1090">
+                            <note place="end" xml:id="UT22084-101-146-217"> The Tengyur recension of
+                  the text (Toh 1777) contains the homage “Homage to Glorious Vajrapāṇi,” which is
+                  absent in the Kangyur recension (Toh 1090). </note>O Devī, you wander in this world, naked, riding a donkey—
+            </l>
+            <l key="toh1777"> O Devī, you wander in this world, naked, riding a donkey—</l>
             <l>Anointed with sesame oil, your hair a single plait, and with lead earrings, you are seductive and fully adorned,</l>
             <l>While iron shackles grace your feet as anklets.</l>
             <l>We know your<note place="end" xml:id="UT22084-101-146-180"> We have emended <foreign xml:lang="Bo-Ltn" type="quote">lha mo khyod nyid
-                  kyis</foreign> to <foreign xml:lang="Bo-Ltn">lha mo khyod nyid kyi</foreign>.</note> nature is beautiful, and yet<note place="end" xml:id="UT22084-101-146-181"> Following Toh 1090: <foreign xml:lang="Bo-Ltn" type="quote">kyi</foreign>. Toh 1777: <foreign xml:lang="Bo-Ltn" type="quote">kyis</foreign>.</note>—who can know the matter of your great ocean of activity for others? |1|</l>
+              kyis</foreign> to <foreign xml:lang="Bo-Ltn">lha mo khyod nyid kyi</foreign>.</note> nature is beautiful, and yet<note place="end" xml:id="UT22084-101-146-181"> Following Toh 1090: <foreign xml:lang="Bo-Ltn" type="quote">kyi</foreign>. Toh 1777: <foreign xml:lang="Bo-Ltn" type="quote">kyis</foreign>.</note>—who can know the matter of your great ocean of activity for others? |1|</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-101-146-182"/>
           <lg tid="104">
